--- a/index.html
+++ b/index.html
@@ -165,21 +165,22 @@
 									<p>Let's connect and explore how we can leverage technology to create meaningful solutions together!</p>
 
 									<div class="contact-icons">
-										<a href="https://www.linkedin.com/in/maheshc7/" target="_blank" class="icon linkedin" title="LinkedIn" style="color: #0E76A8;">
-											<i class="fab fa-linkedin fa-3x fa-shake"></i>
+										<a href="https://www.linkedin.com/in/maheshc7/" target="_blank" class="icon linkedin" title="LinkedIn">
+											<i class="fab fa-linkedin fa-3x fa-shake" style="color: #0E76A8;"></i>
+											<div class="icon-text" style="color: #0E76A8;">LinkedIn</div>
 										</a>
-										<a href="https://github.com/maheshc7/" target="_blank" class="icon github" title="GitHub" style="color: black;">
-											<i class="fab fa-github fa-3x fa-flip"></i>
+										<a href="https://github.com/maheshc7/" target="_blank" class="icon github" title="GitHub">
+											<i class="fab fa-github fa-3x fa-flip" style="color: black;"></i>
+											<div class="icon-text" style="color: black;">GitHub</div>
 										</a>
-										<a href="mailto:maheshchoudhary@gmail.com" class="icon envelope" target="_blank" title="Email" style="color: #EA4335;">
-											<i class="fas fa-envelope fa-3x fa-bounce"></i>
+										<a href="mailto:maheshchoudhary@gmail.com" class="icon envelope" target="_blank" title="Email">
+											<i class="fas fa-envelope fa-3x fa-bounce" style="color: #EA4335;"></i>
+											<div class="icon-text" style="color: #EA4335;">Email</div>
 										</a>
-										<button id= "pdfButton" class="icon resume" target="_blank" title="Resume" style="color: #FBBC05;">
-											<i class="fas fa-file-pdf fa-3x fa-bounce"></i>
-										</button>
-									</div>
-									<div class="pdf-container">
-										<iframe id="pdf-frame"></iframe>
+										<a href="https://github.com/maheshc7/maheshc7/blob/main/Mahesh_Resume_073123.pdf" class="icon resume" target="_blank" title="Resume">
+											<i class="fas fa-file-pdf fa-3x fa-bounce" style="color: #FBBC05;"></i>
+											<div class="icon-text" style="color: #FBBC05;">Resume</div>
+										</a>
 									</div>
 									<!-- <form method="post" action="#">
 										<div class="row gtr-uniform">
