contact icon fix

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/maheshc7/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://github.com/maheshc7/" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/maheshc7/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/maheshc7/" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="mailto:maheshchoudhary028@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
@@ -165,21 +165,21 @@
 									<p>Let's connect and explore how we can leverage technology to create meaningful solutions together!</p>
 
 									<div class="contact-icons">
-										<a href="https://www.linkedin.com/in/maheshc7/" target="_blank" class="icon linkedin" title="LinkedIn">
+										<a href="https://www.linkedin.com/in/maheshc7/" target="_blank" class="icon social linkedin" title="LinkedIn">
 											<i class="fab fa-linkedin fa-3x fa-shake" style="color: #0E76A8;"></i>
-											<div class="icon-text" style="color: #0E76A8;">LinkedIn</div>
+											<div class="social-text" style="color: #0E76A8;">LinkedIn</div>
 										</a>
-										<a href="https://github.com/maheshc7/" target="_blank" class="icon github" title="GitHub">
+										<a href="https://github.com/maheshc7/" target="_blank" class="icon social github" title="GitHub">
 											<i class="fab fa-github fa-3x fa-flip" style="color: black;"></i>
-											<div class="icon-text" style="color: black;">GitHub</div>
+											<div class="social-text" style="color: black;">GitHub</div>
 										</a>
-										<a href="mailto:maheshchoudhary@gmail.com" class="icon envelope" target="_blank" title="Email">
+										<a href="mailto:maheshchoudhary028@gmail.com" class="icon social envelope" title="Email">
 											<i class="fas fa-envelope fa-3x fa-bounce" style="color: #EA4335;"></i>
-											<div class="icon-text" style="color: #EA4335;">Email</div>
+											<div class="social-text" style="color: #EA4335;">Email</div>
 										</a>
-										<a href="https://github.com/maheshc7/maheshc7/blob/main/Mahesh_Resume_073123.pdf" class="icon resume" target="_blank" title="Resume">
-											<i class="fas fa-file-pdf fa-3x fa-bounce" style="color: #FBBC05;"></i>
-											<div class="icon-text" style="color: #FBBC05;">Resume</div>
+										<a href="https://github.com/maheshc7/maheshc7/blob/main/Mahesh_Resume_073123.pdf" class="icon social resume" target="_blank" title="Resume">
+											<i class="fas fa-file-pdf fa-3x fa-fade" style="color: #FBBC05;"></i>
+											<div class="social-text" style="color: #FBBC05;">Resume</div>
 										</a>
 									</div>
 									<!-- <form method="post" action="#">
