add project links

--- a/index.html
+++ b/index.html
@@ -105,18 +105,18 @@
 									<p>Explore some of the projects I've worked on and accomplishments I've achieved:</p>
 									<div class="project-container">
 										<div class="project">
-											<h4><a href="#" class="project-link">LegalAid Scheduler</a></h4>
+											<h4><a href="https://legalaid.vercel.app/" class="project-link">LegalAid Scheduler</a></h4>
 											<p>Developed a comprehensive legal case management system, integrating AI-driven enhancements with ChatGPT for streamlined legal workflows and improved efficiency.</p>
 											<strong><p><i>NEXT JS | Jest | Python | Flask | Pytest| ChatGPT</i></p></strong>
 										</div>
 										<div class="project">
-											<h4><a href="#" class="project-link">DriveWave – Gesture Controlled Robot Car</a></h4>
+											<h4><a href="https://github.com/maheshc7/gesture-car" class="project-link">DriveWave – Gesture Controlled Robot Car</a></h4>
 											<p>Collaborated on seamless integration of hand gesture recognition ML model with Arduino-based robot car, optimizing real-time interaction.</p>
 											<strong><p><i>Python | Arduino | Machine Learning</i></p></strong>
 										</div>
 										<article class="project">
 											<div class="inner">
-												<h4><a href="#" class="project-link">Pedaleze – Fitness Cycling App</a></h4>
+												<h4><a href="https://github.com/maheshc7/PedalEze" class="project-link">Pedaleze – Fitness Cycling App</a></h4>
 												<p>Developed a user-friendly fitness cycling Android app, enabling users to track cycle routes and heart rate through BLE-based integration with wrist/fitness bands.</p>
 												<strong><p><i>Android | BLE | GPS</i></p></strong>
 											</div>
